..F....... [ZBXNEXT-5569] fixed server check message overlaping

--- a/frontends/php/assets/styles/blue-theme.css
+++ b/frontends/php/assets/styles/blue-theme.css
@@ -358,8 +358,6 @@ footer {
     top: 0;
     bottom: 0;
     box-shadow: 2px 0 6px rgba(118, 141, 153, 0.5); }
-    .sidebar.is-compact.is-opened, .sidebar.is-hidden.is-opened {
-      z-index: 10001; }
   .sidebar.is-compact + .wrapper {
     margin-left: 48px; }
   .sidebar.is-compact .button-compact,
